# hourskit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.crates.md  README.md  audit.toml  clippy.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-nightly.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/hourskit/: Cargo.toml
crates/hourskit/examples/: seed_data.rs
crates/hourskit/src/: client.rs  error.rs  fetcher.rs  lib.rs  session.rs  time.rs
crates/hourskit/src/sources/: bundled.rs  mod.rs  parquet_io.rs
crates/hourskit/tests/: blocking_guard.rs  bulletproof.rs  extended_trading_roster.rs  idiomatic.rs  integration.rs  last_trading_day.rs  nasdaq_extended.rs  properties.rs  sessions.rs  time_unit.rs
data/: manifest.json  sessions.parquet
