[package]
name = "hourskit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for hourskit — US exchange trading-hours inspection and manifest tooling"
keywords = ["cboe", "nasdaq", "cli", "finance", "parquet"]
categories = ["command-line-utilities", "finance"]
readme = "../README.md"

[[bin]]
name = "hourskit-cli"
path = "src/main.rs"

[dependencies]
hourskit = { path = "../crates/hourskit", version = "0.1.0" }

anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
serde_json.workspace = true

[lints]
workspace = true
