[package]
name = "hourskit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for hourskit — US exchange trading-hours inspection and manifest tooling"
keywords = ["cboe", "nasdaq", "cli", "finance", "parquet"]
categories = ["command-line-utilities", "finance"]
readme = "../README.md"

[[bin]]
name = "hourskit-cli"
path = "src/main.rs"

[dependencies]
# CLI is a parquet workflow tool (bundled lookup, refresh, manifest);
# pin the parquet-loader feature on so the CLI compiles regardless of the
# default-features setting in any consumer workspace.
hourskit = { path = "../crates/hourskit", version = "0.6.0", features = ["parquet-loader"] }

anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
serde_json.workspace = true

[lints]
workspace = true
